--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="me.nickpierson.StatisticsSolver.basic.BasicActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
