Does a lot. Should've committed sooner. Styles basic screen (again). Makes keypad show up properly on Basic screen. Adds all basic calculations.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,7 +24,8 @@
         </activity>
         <activity
             android:name="me.nickpierson.StatisticsSolver.basic.BasicActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:windowSoftInputMode="stateAlwaysHidden" >
         </activity>
     </application>
 
