--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,6 +27,10 @@
             android:label="@string/app_name"
             android:windowSoftInputMode="stateAlwaysHidden" >
         </activity>
+        <activity
+            android:name="me.nickpierson.StatisticsSolver.pc.PCActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
