--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,6 +31,10 @@
             android:name="me.nickpierson.StatsCalculator.pc.PCActivity"
             android:label="@string/app_name" >
         </activity>
+        <activity
+            android:name="me.nickpierson.StatsCalculator.basic.reference.BasicReferenceActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
