--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,7 +29,8 @@
         </activity>
         <activity
             android:name="me.nickpierson.StatsCalculator.pc.PCActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:windowSoftInputMode="stateAlwaysHidden" >
         </activity>
         <activity
             android:name="me.nickpierson.StatsCalculator.basic.reference.BasicReferenceActivity"
