--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/Theme.AppCompat.Light.DarkActionBar" >
         <activity
             android:name="me.nickpierson.StatsCalculator.HomeActivity"
             android:label="@string/app_name" >
@@ -25,16 +25,28 @@
         <activity
             android:name="me.nickpierson.StatsCalculator.basic.BasicActivity"
             android:label="@string/app_name"
+            android:parentActivityName="me.nickpierson.StatsCalculator.HomeActivity"
             android:windowSoftInputMode="stateAlwaysHidden" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="me.nickpierson.StatsCalculator.HomeActivity" />
         </activity>
         <activity
             android:name="me.nickpierson.StatsCalculator.pc.PCActivity"
             android:label="@string/app_name"
+            android:parentActivityName="me.nickpierson.StatsCalculator.HomeActivity"
             android:windowSoftInputMode="stateAlwaysHidden" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="me.nickpierson.StatsCalculator.HomeActivity" />
         </activity>
         <activity
             android:name="me.nickpierson.StatsCalculator.basic.reference.BasicReferenceActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:parentActivityName="me.nickpierson.StatsCalculator.basic.BasicActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="me.nickpierson.StatsCalculator.basic.BasicActivity" />
         </activity>
     </application>
 
