--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="me.nickpierson.StatsCalculatorFree.FreeHomeActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:launchMode="singleTop" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,6 +27,7 @@
         <activity
             android:name="me.nickpierson.StatsCalculatorFree.basic.FreeBasicActivity"
             android:label="@string/app_name"
+            android:launchMode="singleTop"
             android:parentActivityName="me.nickpierson.StatsCalculatorFree.FreeHomeActivity"
             android:windowSoftInputMode="stateAlwaysHidden" >
             <meta-data
