--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="me.nickpierson.StatsCalculatorFree.FreeHomeActivity"
+            android:name="me.nickpierson.StatsCalculatorFree.home.FreeHomeActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop" >
             <intent-filter>
@@ -28,7 +28,7 @@
             android:name="me.nickpierson.StatsCalculatorFree.basic.FreeBasicActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
-            android:parentActivityName="me.nickpierson.StatsCalculatorFree.FreeHomeActivity"
+            android:parentActivityName="me.nickpierson.StatsCalculatorFree.home.FreeHomeActivity"
             android:windowSoftInputMode="stateAlwaysHidden" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -37,14 +37,14 @@
         <activity
             android:name="me.nickpierson.StatsCalculatorFree.pc.FreePCActivity"
             android:label="@string/app_name"
-            android:parentActivityName="me.nickpierson.StatsCalculatorFree.FreeHomeActivity"
+            android:parentActivityName="me.nickpierson.StatsCalculatorFree.home.FreeHomeActivity"
             android:windowSoftInputMode="stateAlwaysHidden" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="me.nickpierson.StatsCalculatorFree.FreeHomeActivity" />
         </activity>
         <activity
-            android:name="me.nickpierson.StatsCalculatorFree.basic.reference.FreeBasicReferenceActivity"
+            android:name="me.nickpierson.StatsCalculatorFree.reference.FreeBasicReferenceActivity"
             android:label="@string/app_name"
             android:parentActivityName="me.nickpierson.StatsCalculatorFree.basic.FreeBasicActivity" >
             <meta-data
