--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -44,7 +44,7 @@
                 android:value="me.nickpierson.StatsCalculatorFree.home.FreeHomeActivity" />
         </activity>
         <activity
-            android:name="me.nickpierson.StatsCalculatorFree.reference.FreeBasicReferenceActivity"
+            android:name="me.nickpierson.StatsCalculator.reference.BasicReferenceActivity"
             android:label="@string/app_name"
             android:parentActivityName="me.nickpierson.StatsCalculatorFree.basic.FreeBasicActivity" >
             <meta-data
