--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,7 +17,8 @@
         <activity
             android:name="me.nickpierson.StatsCalculatorFree.home.FreeHomeActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTop" >
+            android:launchMode="singleTop"
+            android:theme="@style/HomeTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,6 +30,7 @@
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:parentActivityName="me.nickpierson.StatsCalculatorFree.home.FreeHomeActivity"
+            android:theme="@style/NotHomeTheme"
             android:windowSoftInputMode="stateAlwaysHidden" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -38,6 +40,7 @@
             android:name="me.nickpierson.StatsCalculatorFree.pc.FreePCActivity"
             android:label="@string/app_name"
             android:parentActivityName="me.nickpierson.StatsCalculatorFree.home.FreeHomeActivity"
+            android:theme="@style/NotHomeTheme"
             android:windowSoftInputMode="stateAlwaysHidden" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -46,7 +49,8 @@
         <activity
             android:name="me.nickpierson.StatsCalculator.reference.BasicReferenceActivity"
             android:label="@string/app_name"
-            android:parentActivityName="me.nickpierson.StatsCalculatorFree.basic.FreeBasicActivity" >
+            android:parentActivityName="me.nickpierson.StatsCalculatorFree.basic.FreeBasicActivity"
+            android:theme="@style/NotHomeTheme" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="me.nickpierson.StatsCalculatorFree.basic.FreeBasicActivity" />
